--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,7 +1,10 @@
 name: Update Release with Latest Tag
 
 on:
-  workflow_dispatch: # Позволяет запускать этот workflow вручную
+  push:
+    branches:
+      - main  # Работает при изменениях в ветке 'main'
+  workflow_dispatch:  # Позволяет запускать этот workflow вручную
 
 jobs:
   update-release:
@@ -20,6 +23,7 @@ jobs:
       - name: Create Boot-Anima.zip
         run: |
           zip -r Boot-Anima.zip . -x "*.github/workflows/*"
+
       # Получаем токен для доступа к API GitHub
       - name: Get GitHub token
         id: token
@@ -44,10 +48,11 @@ jobs:
             -d '{
               "tag_name": "latest",
               "name": "Latest Release",
-              "body": "Updated release with new Boot-Anima.zip.",
+              "body": "Released by workflow script.",
               "draft": false,
               "prerelease": false
             }' https://api.github.com/repos/${{ github.repository }}/releases
+          
           # Загружаем архив в релиз
           curl -X POST \
             -H "Authorization: token ${{ steps.token.outputs.token }}" \
