--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main  # Работает при изменениях в ветке 'main'
+      - update # Работает при изменениях в ветке 'update'
   workflow_dispatch:  # Позволяет запускать этот workflow вручную
 
 jobs:
